// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputJson > Check render > renders array value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">arrayName</span><!-- Object value --><span class="array input-json-value">Array[3]</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children -->
  <ul class="input-json-children">
    <li>
      <div class="input-json" data-test-id="input-json">
        <div class="input-json-line"><!-- Object property key --><span class="input-json-label">0</span><!-- Object value --><span class="string input-json-value">"test"</span><!-- Actions -->
          <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div><!-- Children --><!--v-if-->
      </div>
    </li>
    <li>
      <div class="input-json" data-test-id="input-json">
        <div class="input-json-line"><!-- Object property key --><span class="input-json-label">1</span><!-- Object value --><span class="number input-json-value">123</span><!-- Actions -->
          <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div><!-- Children --><!--v-if-->
      </div>
    </li>
    <li>
      <div class="input-json" data-test-id="input-json">
        <div class="input-json-line"><!-- Object property key --><span class="input-json-label">2</span><!-- Object value --><span class="boolean input-json-value">true</span><!-- Actions -->
          <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div><!-- Children --><!--v-if-->
      </div>
    </li>
  </ul>
</div>
`;

exports[`InputJson > Check render > renders boolean value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">booleanName</span><!-- Object value --><span class="boolean input-json-value">true</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children --><!--v-if-->
</div>
`;

exports[`InputJson > Check render > renders null value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">nullName</span><!-- Object value --><span class="null input-json-value">null</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children --><!--v-if-->
</div>
`;

exports[`InputJson > Check render > renders number value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">numberName</span><!-- Object value --><span class="number input-json-value">123</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children --><!--v-if-->
</div>
`;

exports[`InputJson > Check render > renders object value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">objectName</span><!-- Object value --><span class="object input-json-value">Object</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children -->
  <ul class="input-json-children">
    <li>
      <div class="input-json" data-test-id="input-json">
        <div class="input-json-line"><!-- Object property key --><span class="input-json-label">foo</span><!-- Object value --><span class="string input-json-value">"test"</span><!-- Actions -->
          <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div><!-- Children --><!--v-if-->
      </div>
    </li>
    <li>
      <div class="input-json" data-test-id="input-json">
        <div class="input-json-line"><!-- Object property key --><span class="input-json-label">bar</span><!-- Object value --><span class="number input-json-value">123</span><!-- Actions -->
          <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div><!-- Children --><!--v-if-->
      </div>
    </li>
  </ul>
</div>
`;

exports[`InputJson > Check render > renders string value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">stringName</span><!-- Object value --><span class="string input-json-value">"string value"</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children --><!--v-if-->
</div>
`;

exports[`InputJson > Check render > renders undefined value 1`] = `
<div class="input-json" data-test-id="input-json">
  <div class="input-json-line"><!-- Object property key --><span class="input-json-label">numberName</span><!-- Object value --><span class="undefined input-json-value">undefined</span><!-- Actions -->
    <div class="input-json-actions"><button type="button" class="input-json-button edit" aria-label="Edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div><!-- Children --><!--v-if-->
</div>
`;
